# placebo25-testtask

./: .gitignore  README.md  pyproject.toml
placebo25/: Dockerfile  README.md  db.sqlite3  manage.py
placebo25/placebo25/: asgi.py  settings.py  urls.py  wsgi.py
placebo25/structure/: admin.py  models.py  serializers.py  urls.py  views.py
placebo25/structure/templates/structure/: home.html
